<resources>
    <string name="app_name">PADC-MyanmarAttractions</string>
    <string name="action_settings">Settings</string>

    <string name="home_screen_title">Myanmar\'s Attractions</string>

    <string name="attraction_list_detail_transition_name">attraction_list_detail_transition_name</string>
    <string name="action_share">Share</string>

    <!--left Menu-->
    <string name="left_menu_attraction">Home</string>
    <string name="left_menu_attraction_favourite">Favouriate Attraction</string>
    <string name="left_menu_download">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="title_activity_log_in">LogInActivity</string>

    <!--Login-->
    <string name="lbl_username">User Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Log In</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_login">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_signup">SignUp</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="lbl_email">name@mail.com</string>
    <string-array name="country_array">
        <item>Myanmar</item>
        <item>Japan</item>
        <item>Singapoer</item>
        <item>Hong Kong</item>
        <item>Malaysia</item>
    </string-array>
    <string name="title_activity_user">UserActivity</string>

</resources>
