<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/left_menu_attraction"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/left_menu_attraction"
            />
        <item
            android:id="@+id/left_menu_favouriate"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/left_menu_attraction_favourite"/>

        <item
            android:id="@+id/left_menu_image_loading"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/left_menu_download"/>

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/more"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>

    </group>
</menu>