<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">
        <EditText
            android:id="@+id/etRegUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <EditText
            android:id="@+id/et_RegPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:inputType="textPassword"
            android:hint="@string/lbl_password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/lbl_email"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Date of Birth"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/sp_country_of_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/country_array"
        android:layout_marginTop="@dimen/margin_large"></Spinner>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:paddingRight="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_large"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"/>
</LinearLayout>

